[package]
name = "wasm_bubble"
version = "0.1.0"
description = "wasm bubble sort algorithms"
readme = "README.md"
edition = "2021"

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde"] }
serde = { version = "1", features = ["std"] }
web-sys = { version="0.3.5", features=[ "console" ] }
js-sys = "0.3"
wee_alloc = "0.4"

[lib]
crate-type = ["cdylib"]